--- a/fertilizer-sckit-learn/templates/index.html
+++ b/fertilizer-sckit-learn/templates/index.html
@@ -13,7 +13,7 @@
         <div class="contact-image">
             <img src="https://image.ibb.co/kUagtU/rocket_contact.png" alt="rocket_contact"/>
         </div>
-        <form action="{{url_for('predict')}}" method="post">
+        <form action="{{url_for('predictWeb')}}" method="post">
             <h3>Tes prediksi pepek</h3>
            <div class="row">
                 <div class="col-md-6">
